# sriracha

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
.circleci/: config.yml
src/sriracha/helper/: cmd.py
sriracha/: args.py  log.py  scoring.py
sriracha/helper/: cmd.py  manage_user_groups.py
sriracha/sriracha/: helpers.py
test/: test_args.py  test_helper_cmd.py
