[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sriracha"
version = "0.0.11"
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[tool.setuptools_scm]

[tool.pylint."messages control"]
disable = [
    "missing-docstring",
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
]
